# Tyr

./: .env.example  .env.template  .gitignore  Cargo.toml  DESKTOP_APP_COMPLETE.md  DESKTOP_APP_PLAN.md  DESKTOP_APP_STATUS.md  FIXED.md  IMPLEMENTATION_COMPLETE.md  LAUNCH_DESKTOP_APP.md  LICENSE  LOCAL_AI_INTEGRATION_GUIDE.md  OLLAMA_SETUP.md  QUICKSTART.md  QUICKSTART_FIXED.md  README.md  SAAS_ROADMAP.md  START_HERE.md  USAGE.md  pyproject.toml  quickstart.sh  run-tyr.ps1  setup-ollama.sh
config/: default.yaml  production.yaml
examples/: README.md  ecommerce-architecture.md  insecure-infrastructure.tf  insecure-k8s.yaml
scripts/: bootstrap_markets.py  setup_credentials.py
src/: analyzer.rs  main.rs
tyr/: main.py
tyr/core/: config.py  exceptions.py  logging.py  models.py
tyr/feeds/: base.py  feed_manager.py  kalshi_rest.py  polymarket_rest.py  polymarket_ws.py
tyr/storage/: database.py  models_db.py  opportunity_repo.py
tyr/utils/: console.py
ui/: BEST_PRACTICES_AUDIT.md  COMPONENT_VERIFICATION.md  MEMORY_LEAK_FIXES.md  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src-tauri/: Cargo.toml
ui/src-tauri/src/: analyzer.rs  lib.rs  models.rs  reporters.rs
ui/src-tauri/src/ai/: claude.rs  mod.rs  ollama.rs
ui/src/components/: ChatPanel.tsx  Dashboard.tsx  FileUpload.tsx  ProjectList.tsx  Settings.tsx  Sidebar.tsx  index.ts
ui/src/store/: index.ts
ui/src/types/: index.ts
